--- a/debug.view.css
+++ b/debug.view.css
@@ -1,16 +1,16 @@
-[my_meter_object_row_content] {
+[my_debug_object_row_content] {
 	padding-left: .75rem;
 	display: block;
 }
 
-[my_meter_object_row],
-[my_meter_place_row],
-[my_meter_meter_row] {
+[my_debug_object_row],
+[my_debug_place_row],
+[my_debug_meter_row] {
 	box-shadow: 0 0 0 1px var(--mol_theme_line);
 	background: hsla( 0deg , 0% , 50% , .05 );
 	border-radius: none;
 }
 
-[my_meter_meter_icon_water_hot] {
+[my_debug_meter_icon_water_hot] {
 	fill: #FF7600;
 }
